...
        return null;
      } else if (selected == true) {
        setState(() {
          _selectedExercises.add(name);
          if (exercise["targetReps"] != null) {
            _exercises.add({
              "xp": exercise["xp"],
              "name": name,
              "repetitions": exercise["targetReps"],
              "sets": exercise["targetSets"]
            });
          } else if (exercise["targetMin"] != null) {
            _exercises.add({
...
                      padding: EdgeInsets.fromLTRB(20, 8, 0, 8),
                      color: const Color(0xFF212838),
                      child: new Row(
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: <Widget>[
                          Text('No exercises done',
                              key: Key("NoExercisesPopUp"),
                              style: TextStyle(
                                decoration: TextDecoration.none,
                                color: Colors.white,
                                fontWeight: FontWeight.bold,
                                fontSize: 17,
                              )),
                          Align(
                              child: FlatButton.icon(
                            key: Key("crossOutPopUpNE"),
                            padding: EdgeInsets.fromLTRB(45, 8, 0, 8),
                            color: Theme.of(context).secondaryHeaderColor,
                            textColor: Colors.white,
                            icon: Icon(
                              Icons.close,
                            ),
...
                    );
                  });
            },
          ),
          key: PageStorageKey<int>(index),
          title: new CheckboxListTile(
            key: Key("warmUp"),
            value: _selectedExercises.contains("Warm-up"),
            onChanged: (bool selected) {
              _warmUpSelected(
                  selected, workout.warmUp[index], "Warm-up", workout.warmUp);
            },
            title: new Text(
...
            Text("Remember that you get a bonus if you finish all exercises!"),
      );
    }

    Widget _returnFinishWorkoutButton() {
      return new Padding(
          key: Key("finishWorkoutButton"),
          padding: EdgeInsets.symmetric(horizontal: 0, vertical: 15.0),
          child: ScopedModelDescendant<User>(builder: (context, child, model) {
            return RaisedButton(
              key: Key("finishButton"),
              elevation: 5.0,
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(15.0),
              ),
              onPressed: () {
                _validateAndSaveWorkout();
...
    }

    return new Scaffold(
      appBar: AppBar(
        title: new Text(widget.workoutName),
        leading: IconButton(
          key: Key("backToStartWorkout"),
          icon: Icon(Icons.arrow_back_ios),
          onPressed: () {
            widget.onStartWorkout();
          },
          color: Colors.white,
        ),
...
