...
        child: Scaffold(
          backgroundColor: const Color(0xFF212838),
          appBar: new AppBar(
            backgroundColor: const Color(0xFF212838),
            leading: IconButton(
                icon: Icon(Icons.arrow_back_ios),
                key: Key("signupBackButton"),
                onPressed: () {
                  widget.onSignedOut();
                }),
          ),
          body: Stack(
            children: <Widget>[
...
          padding: EdgeInsets.fromLTRB(0.0, 30.0, 0.0, 0.0),
          child: TextFormField(
            maxLines: 1,
            keyboardType: TextInputType.emailAddress,
            autofocus: false,
            focusNode: _focusNodeEmail,
            key: Key("signupEmail"),
            decoration: InputDecoration(
              icon: Icon(Icons.email),
              labelText: 'Email',
              contentPadding: EdgeInsets.fromLTRB(20.0, 10.0, 20.0, 10.0),
              border: UnderlineInputBorder(),
            ),
...
        focusNode: _focusNodePassword,
        child: Padding(
          padding: EdgeInsets.fromLTRB(0.0, 15.00, 0.0, 0.0),
          child: TextFormField(
            autofocus: false,
            focusNode: _focusNodePassword,
            key: Key("signupPassword"),
            maxLines: 1,
            obscureText: true,
            decoration: InputDecoration(
              icon: Icon(Icons.lock),
              labelText: 'Password',
              contentPadding: EdgeInsets.fromLTRB(20.0, 10.0, 20.0, 10.0),
...
        focusNode: _focusNodePassword2,
        child: Padding(
          padding: EdgeInsets.fromLTRB(0.0, 15.00, 0.0, 0.0),
          child: TextFormField(
            autofocus: false,
            focusNode: _focusNodePassword2,
            key: Key("signupPassword2"),
            maxLines: 1,
            obscureText: true,
            decoration: InputDecoration(
              icon: Icon(Icons.lock),
              labelText: 'Verify password',
              contentPadding: EdgeInsets.fromLTRB(20.0, 10.0, 20.0, 10.0),
...
        ));
  }

  Widget _nextButton() {
    return Padding(
      padding: EdgeInsets.symmetric(vertical: 16.0),
      key: Key("SignUp2"),
      child: RaisedButton(
        elevation: 5.0,
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(15.0),
        ),
        onPressed: _validateAndSubmit,
...
  }

  Widget _showErrorMessage() {
    if (_errorMessage.length > 0 && _errorMessage != null) {
      return new Text(
        _errorMessage,
        key: Key("SignUpErrorMessage"),
        style: TextStyle(
            fontSize: 13.0,
            color: Colors.red,
            height: 1.0,
            fontWeight: FontWeight.w300),
      );
...
