...
        child: Scaffold(
            backgroundColor: Theme.of(context).secondaryHeaderColor,
            appBar: new AppBar(
              backgroundColor: Theme.of(context).secondaryHeaderColor,
              leading: IconButton(
                  icon: Icon(Icons.arrow_back_ios),
                  key: Key("loginBackButton"),
                  onPressed: () {
                    widget.onSignedOut();
                  }),
              iconTheme: IconThemeData(
                color: Colors.white, //change your color here
              ),
...
      if (_errorMessage ==
              "Network error (such as timeout, interrupted connection or unreachable host) has occurred." ||
          _errorMessage ==
              "A network error (such as timeout, interrupted connection or unreachable host) has occurred.") {
        return new Text(
          _errorMessage,
          key: Key("LogInErrorMessage"),
          style: TextStyle(
              fontSize: 13.0,
              color: Colors.red,
              height: 1.0,
              fontWeight: FontWeight.w300),
        );
...
        focusNode: _focusNodeEmail,
        child: Padding(
          padding: EdgeInsets.fromLTRB(0.0, 50.0, 0.0, 0.0),
          child: TextFormField(
            maxLines: 1,
            keyboardType: TextInputType.emailAddress,
            key: Key("loginUsername"),
            autofocus: false,
            focusNode: _focusNodeEmail,
            decoration: InputDecoration(
              icon: Icon(Icons.email),
              labelText: 'Email',
              contentPadding: EdgeInsets.fromLTRB(20.0, 10.0, 20.0, 10.0),
...
  //Password input field
  Widget _passwordInput() {
    return EnsureVisibleWhenFocused(
        focusNode: _focusNodePassword,
        child: Padding(
          padding: EdgeInsets.fromLTRB(0.0, 15.00, 0.0, 0.0),
          key: Key("loginPassword"),
          child: TextFormField(
            autofocus: false,
            focusNode: _focusNodePassword,
            maxLines: 1,
            obscureText: true,
            decoration: InputDecoration(
...
        ));
  }

  Widget _loginButton() {
    return Padding(
      padding: EdgeInsets.symmetric(vertical: 16.0),
      key: Key("LogIn2"),
      child: RaisedButton(
        elevation: 5.0,
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(15.0),
        ),
        onPressed: _validateAndSubmit,
...
